メッセージ一覧実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,3 +1,25 @@
-<div class="chat_header"></div>
-<div class="chat_area"></div>
+<div class="chat_header">
+  <div class="room">テストルーム１</div>
+  <div class="room_exit">
+    <a href="">チャットを終了する</a>
+  </div>
+</div>
+
+<div class="chat_area">
+  <div class="messages">
+    <div class="name_time">
+      <div class="user_name">Tom</div>
+      <div class="chat_time">2020/01/01() 12:34:56</div>
+    </div>
+    <div class="chat_message">hello</div>
+  </div>
+  <div class="messages">
+    <div class="name_time">
+      <div class="user_name">Tom</div>
+      <div class="chat_time">2020/01/01() 12:34:56</div>
+    </div>
+    <div class="chat_message">hello</div>
+  </div>
+</div>
+
 <div class="post_area"></div>
