--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -62,13 +62,62 @@
   height: 100px;
   background-color: #ffffff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.room{
+  font-size: 24px;
+  color: #333;
+  padding-top: 36px;
+}
+
+.room_exit{
+  margin-top: 40px;
+}
+
+.room_exit a{
+  color: darkred;
+  text-decoration: none;
+  border: 1px solid darkred;
+  padding: 20px;
 }
 
 .chat_area{
   height: calc(100% - 100px - 90px);
   background-color: #fafafa;
   padding: 46px 0 40px;
+  overflow: scroll;
 }
+
+.messages{
+  margin-bottom: 40px;
+  padding-left: 30px;
+}
+
+.name_time{
+  display: flex;
+}
+
+.user_name{
+  font-size: 16px;
+  color: #434a54;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.chat_time{
+  font-size: 12px;
+  color: #999;
+  margin-top: 10px;
+}
+
+.chat.message{
+  font-size: 14px;
+  color: #434a54;
+  margin-top: 10px;
+}
+
 
 .post_area{
   height: 90px;
