--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -22,4 +22,9 @@
   </div>
 </div>
 
-<div class="post_area"></div>
+<div class="post_area">
+  <div class="form">
+    <input class="form_message" placeholder= "type a message">
+  </div>
+  <input class="post_btn" type="submit" value= "送信">
+</div>
