--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -25,6 +25,10 @@
 <div class="post_area">
   <div class="form">
     <input class="form_message" placeholder= "type a message">
+    <label class="form_image">
+      <span class="image_file">画像</span>
+      <input type="file" class="hidden">
+    </label>
   </div>
   <input class="post_btn" type="submit" value= "送信">
 </div>
