--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="name_area">
   <div class="name_btn">
-    <a href="">太郎</a>
+    <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
   <div class="create_btn">
    <a href="">チャットを作成する</a>
