チャット画面の編集

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,14 +3,15 @@
     <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
   <div class="create_btn">
-   <a href="">チャットを作成する</a>
+   <%= link_to 'チャットを作成する', new_room_path %>
   </div>
 </div>
-<div class="room_area">
-  <div class="room_name">
-    <a href="">テストルーム１</a>
-  </div>
-    <div class="room_name">
-    <a href="">テストルーム２</a>
-  </div>
+ <div class="room_area">
+  <% current_user.rooms.each do |room|%>
+    <div class="room">
+      <div class="room_name">
+        <a href="#"><%= room.name %></a>
+    </div>
+   </div>
+  <% end %>
 </div>
