メッセージ送信機能の実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -119,28 +119,27 @@
 }
 
 
-.post_area{
+.form{
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
   display: flex;
-  align-items: center;
 }
 
-.form{
+.form-input{
   background-color: white;
-  display: flex;
   width: 100%;
+  display: flex;
 }
 
-.form_message{
+.form-message{
   border: none;
   height: 50px;
   width: 100%;
   padding-left: 10px;
 }
 
-.post_btn{
+.form-submit{
   height: 50px;
   background-color: #38aef0;
   border: none;
@@ -150,7 +149,7 @@
   font-size: 16px;
 }
 
-.form_image{
+.form-image{
   font-size: 12px;
   background-color: lightblue;
   color: white;
