--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -22,13 +22,14 @@
   </div>
 </div>
 
-<div class="post_area">
-  <div class="form">
-    <input class="form_message" placeholder= "type a message">
-    <label class="form_image">
-      <span class="image_file">画像</span>
-      <input type="file" class="hidden">
-    </label>
-  </div>
-  <input class="post_btn" type="submit" value= "送信">
-</div>
+
+  <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+    <div class="form-input">
+      <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <%= f.file_field :image, class: 'hidden' %>
+      </label>
+    </div>
+    <%= f.submit '送信', class: 'form-submit' %>
+  <% end %>
