チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,7 @@
 <div class="chat_header">
-  <div class="room">テストルーム１</div>
+  <div class="room">
+    <%= @room.name %>
+  </div>
   <div class="room_exit">
     <a href="">チャットを終了する</a>
   </div>
