--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,18 +1,14 @@
-<div class="message">
-  <div class="upper-message">
-    <div class="message-user">
+<div class="messages">
+  <div class="name_time">
+    <div class="user_name">
       <%= message.user.name %>
-
     </div>
-    <div class="message-date">
+
+    <div class="chat.time">
       <%= message.created_at%>
-
     </div>
   </div>
-  <div class="lower-message">
-    <div class="message-content">
+    <div class="chat.message">
       <%= message.content%>
-
     </div>
-  </div>
 </div>
