--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="chat.time">
-      <%= message.created_at%>
+      <%= l message.created_at%>
     </div>
   </div>
     <div class="chat.message">
