--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -8,7 +8,10 @@
       <%= l message.created_at%>
     </div>
   </div>
-    <div class="chat.message">
-      <%= message.content%>
+    <div>
+      <div class="chat.message">
+        <%= message.content%>
+      </div>
+      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
     </div>
 </div>
